[package]
name = "dashie_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version= "0.14.0", features = ["full"] }
regex = "1.11.1"
tokio = { version="1.44.1", features=["macros", "rt-multi-thread"] }
